Funny thingy: - Major optimization to make future changes simpler for all code and more consistent.